# contacts-FastAPI

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
contacts_api/: auth.py  contacts.db  database.py  main.py  models.py  schemas.py  test_app.py  test_auth.py  test_database.py  test_main.py
